# coffee-tasting

./: README.md  generate_dummy_data.py  index.html  md_tables.py  pyproject.toml
.github/workflows/: build_static_site.yml  data_validation.yaml
coffee/doubleshot-farm-colombia-el-naranjo/: index.html
coffee/fiftybeans-single/: index.html
coffee/fiftybeens-single/: index.html
coffee/typika-laboyano/: index.html
coffee/typika-tres-rayas-gaitania/: index.html
data/: README.md  participants.yaml
data/coffee/: fiftybeens_single.yaml  typika_laboyano.colombia.yaml  typika_tres_rayas_gaitania.yaml
data/coffees/: coffee_colombian_supremo.yaml  coffee_ethiopian_yirgacheffe.yaml  coffee_guatemala_antigua.yaml  coffee_kenyan_aa.yaml  coffee_sumatra_mandheling.yaml  doubleshot-farm-colombia-el-naranjo.yaml  typika-laboyano.yaml  typika-tres-rayas-gaitania.yaml
data/participants/: participant_alice_smith.yaml  participant_bob_johnson.yaml  participant_carol_williams.yaml  participant_david_jones.yaml  participant_eve_brown.yaml  participant_frank_miller.yaml  participant_grace_davis.yaml  participant_henry_wilson.yaml
data/sessions/2024-11-10/rankings/: participant_alice_smith.yaml  participant_bob_johnson.yaml  participant_carol_williams.yaml  participant_david_jones.yaml  participant_eve_brown.yaml  (+3 more)
data/sessions/coffee/: fiftybeens_single.yaml  typika-laboyano-colombia.yaml  typika_laboyano.colombia.yaml  typika_tres_rayas_gaitania.yaml
data/sessions/ratings/: bogdanbodnar.yaml  ivansivak.yaml  jankislinger.yaml  tomaszeman.yaml
reports/: 2024-11-10.html  2024-11-10.md  2024-11-20.html  2024-11-20.md  2024-11-30.html  2024-11-30.md
src/coffee_tasting/: __init__.py  data_models.py  generate_reports.py  validate_data.py
templates/: coffee_batch_template.yaml  coffee_template.yaml  participant_template.yaml  ranking_template.yaml  report_template.html  report_template.md  session_rankings_template.yaml  session_ratings_template.yaml
thermos/: app.py  freeze.py  pyproject.toml
thermos/templates/: coffee.html  index.html
(+40 files in other folders)
