[project]
name = "coffee-tasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Kislinger", email = "jan.kislinger@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.14.0",
    "jinja2>=3.1.4",
    "oyaml>=1.0",
    "latex2markdown>=0.2.1",
    "oyaml>=1.0",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pydantic>=2.10.2",
]

[project.scripts]
validate_data = "coffee_tasting.validate_data:main"
generate_reports = "coffee_tasting.generate_reports:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
