[project]
name = "coffee-tasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Kislinger", email = "jan.kislinger@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "oyaml>=1.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.2",
]

[project.scripts]
validate_data = "coffee_tasting:validate_data"
generate_reports = "coffee_tasting:generate_reports"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
